--- a/学习历程.md
+++ b/学习历程.md
@@ -1,9 +1,44 @@
 ### 《webpack实战：入门、进阶与调优（第2版）》
 ---
-##### chapter 01 (2023-03-21)
+##### chapter 01 (2024-03-21)
 ```
 1. 使用webpack打包,处理文件（模块）之间的依赖关系，js文件合并成一个bundle.js
 2. 引入webpack-dev-server便于开发。npx webpack与 npx webpack-dev-server的区别：
 webpack会实际生成文件，dev-server则生成在内存中
 3. 引入html-webpack-plugin
 ```
+---
+##### chapter 02 (2024-03-22)
+```
+1. 模块是什么？不同模块的标准及不同之处
+  1.1 CommonJs
+2. 如何编写模块？
+3. 模块打包的原理
+```
+---
+##### chapter 03 (2024-03-26)
+```
+1. context
+2. entry
+  2.1 string
+  2.2 array
+  2.3 object
+3. output
+  3.1 filename
+  3.2 path
+  3.3 publicPath[没理解]
+```
+---
+##### chapter04 (2024-03-28)
+```
+1. loader 本质是一个函数
+```
+---
+##### chapter06 (2024-03-29)
+```
+1. import不引入，不参与打包；引入不使用，不参与打包；
+    引入并且使用，参与打包。
+  ==> 这时候会产生一个问题，多个文件引用一个包，会打包多次
+```
+
+
