多页面配置

--- a/学习历程.md
+++ b/学习历程.md
@@ -36,9 +36,19 @@ webpack会实际生成文件，dev-server则生成在内存中
 ---
 ##### chapter06 (2024-03-29)
 ```
+node_moduls
 1. import不引入，不参与打包；引入不使用，不参与打包；
     引入并且使用，参与打包。
-  ==> 这时候会产生一个问题，多个文件引用一个包，会打包多次
+  ==> 这时候会产生一个问题，多个文件引用一个包，会打包多次?
+  解决: optimization.splitChunks
+2. 自定义的公共代码 => optimization.minSize来控制;
+  默认超过20000byte才会打包成一个chunk。(出于a.chunks数量 和 b.chunks体积大小的角度来衡量)
 ```
+
+---
+webpack分包，打包；
+html-webpack-plugin再按依赖顺序加入到html中
+
+spa vs. mpa
 
 
