--- a/学习历程.md
+++ b/学习历程.md
@@ -34,8 +34,22 @@ webpack会实际生成文件，dev-server则生成在内存中
 1. loader 本质是一个函数
 ```
 ---
+##### chapter05 (2024-04-01)
+1. css文件抽离 => mini-css-extract-plugin
+2. css预处理 => 使用 less
+3. css编译插件的容器 => postcss
+4. css自动前缀 => postcss-preset-env
+2. CSS Modules
+
+---
 ##### chapter06 (2024-03-29)
 ```
+0. 对于直接绑定在全局对象上的库，采用entry.vendor的单独开一个入口的模式，打一个单独的包。如（jQuery.min.js）
+---
+optimization.splitChunks 更加简单易用;通过设置提取条件，而不是提取特定的模块，更加通用。
+
+判断条件：影响初始请求数量&请求资源大小
+
 node_moduls
 1. import不引入，不参与打包；引入不使用，不参与打包；
     引入并且使用，参与打包。
@@ -44,6 +58,9 @@ node_moduls
 2. 自定义的公共代码 => optimization.minSize来控制;
   默认超过20000byte才会打包成一个chunk。(出于a.chunks数量 和 b.chunks体积大小的角度来衡量)
 ```
+
+同步模块会打包到主文件中（除非配置了提取），首次会加载
+异步模块默认会单独打包，且首次不会加载
 
 ---
 webpack分包，打包；
