--- a/学习历程.md
+++ b/学习历程.md
@@ -68,4 +68,40 @@ html-webpack-plugin再按依赖顺序加入到html中
 
 spa vs. mpa
 
+---
+#### 生产
+##### chapter07 (2024-04-01)
+
+---
+##### chapter08 (2024-04-02)
+打包优化
+1. 增加资源
+- happypack（node开启多worker）
+  => webpack5 thread-loader
+2. 缩小范围
+3. tree-shaking
+  => webpack中，tree-shaking只对es6 module生效；对commonjs module不生效。
+
+    "sideEffects": [
+    "./src/common/global.js"
+  ]
+
+---
+##### chapter09 (2024-04-02)
+代码压缩
+1. 时间
+2. 空间
+
+---
+##### chapter10 (2024-04-03)
+打包机制
+
+---
+##### chapter12 (2024-04-03)
+其他工具
+1. rollup
+2. parcel
+3. esbuild
+4. vite
+
 
