webpack学习告一段落

--- a/学习历程.md
+++ b/学习历程.md
@@ -105,3 +105,16 @@ spa vs. mpa
 4. vite
 
 
+
+---
+### 梳理
+1. 传统html js css 开发的困境
+- js 依赖关系、加载顺序等
+2. 这是后node已经发展出commonjs、其他还有AMD等
+3. 打包原理
+- 根据入口文件（entry）去查找依赖数
+- 将依赖添加到__webpack_modules__中
+*** 注意：(0,module)()引入模块并且立即执行 ***
+
+
+
