--- a/学习历程.md
+++ b/学习历程.md
@@ -1,120 +1,3 @@
-### 《webpack实战：入门、进阶与调优（第2版）》
----
-##### chapter 01 (2024-03-21)
-```
-1. 使用webpack打包,处理文件（模块）之间的依赖关系，js文件合并成一个bundle.js
-2. 引入webpack-dev-server便于开发。npx webpack与 npx webpack-dev-server的区别：
-webpack会实际生成文件，dev-server则生成在内存中
-3. 引入html-webpack-plugin
-```
----
-##### chapter 02 (2024-03-22)
-```
-1. 模块是什么？不同模块的标准及不同之处
-  1.1 CommonJs
-2. 如何编写模块？
-3. 模块打包的原理
-```
----
-##### chapter 03 (2024-03-26)
-```
-1. context
-2. entry
-  2.1 string
-  2.2 array
-  2.3 object
-3. output
-  3.1 filename
-  3.2 path
-  3.3 publicPath[没理解]
-```
----
-##### chapter04 (2024-03-28)
-```
-1. loader 本质是一个函数
-```
----
-##### chapter05 (2024-04-01)
-1. css文件抽离 => mini-css-extract-plugin
-2. css预处理 => 使用 less
-3. css编译插件的容器 => postcss
-4. css自动前缀 => postcss-preset-env
-2. CSS Modules
-
----
-##### chapter06 (2024-03-29)
-```
-0. 对于直接绑定在全局对象上的库，采用entry.vendor的单独开一个入口的模式，打一个单独的包。如（jQuery.min.js）
----
-optimization.splitChunks 更加简单易用;通过设置提取条件，而不是提取特定的模块，更加通用。
-
-判断条件：影响初始请求数量&请求资源大小
-
-node_moduls
-1. import不引入，不参与打包；引入不使用，不参与打包；
-    引入并且使用，参与打包。
-  ==> 这时候会产生一个问题，多个文件引用一个包，会打包多次?
-  解决: optimization.splitChunks
-2. 自定义的公共代码 => optimization.minSize来控制;
-  默认超过20000byte才会打包成一个chunk。(出于a.chunks数量 和 b.chunks体积大小的角度来衡量)
-```
-
-同步模块会打包到主文件中（除非配置了提取），首次会加载
-异步模块默认会单独打包，且首次不会加载
-
----
-webpack分包，打包；
-html-webpack-plugin再按依赖顺序加入到html中
-
-spa vs. mpa
-
----
-#### 生产
-##### chapter07 (2024-04-01)
-
----
-##### chapter08 (2024-04-02)
-打包优化
-1. 增加资源
-- happypack（node开启多worker）
-  => webpack5 thread-loader
-2. 缩小范围
-3. tree-shaking
-  => webpack中，tree-shaking只对es6 module生效；对commonjs module不生效。
-
-    "sideEffects": [
-    "./src/common/global.js"
-  ]
-
----
-##### chapter09 (2024-04-02)
-代码压缩
-1. 时间
-2. 空间
-
----
-##### chapter10 (2024-04-03)
-打包机制
-
----
-##### chapter12 (2024-04-03)
-其他工具
-1. rollup
-2. parcel
-3. esbuild
-4. vite
-
-
-
----
-### 梳理
-1. 传统html js css 开发的困境
-- js 依赖关系、加载顺序等
-2. 这是后node已经发展出commonjs、其他还有AMD等
-3. 打包原理
-- 根据入口文件（entry）去查找依赖数
-- 将依赖添加到__webpack_modules__中
-*** 注意：(0,module)()引入模块并且立即执行 ***
-
-
-
+1. webpack
+2. ts
+3. react
